# extract_dvcs_cff

./: .gitignore  README.md  pyproject.toml
configs/: gpd_pipeline_example.yaml  ingest_example.yaml  ingest_gpddatabase.yaml
scripts/: likelihood_diagnostics.py  run_gpd_pipeline_example.py  toy_chi2_scan.py
src/extract_dvcs_cff/: __init__.py  cli.py
src/extract_dvcs_cff/apfel/: adapter.py
src/extract_dvcs_cff/config/: __init__.py  defaults.py  paths.py
src/extract_dvcs_cff/data/: __init__.py  dataset_registry.py  dvcs_dataset.py  io.py  schemas.py  validation.py
src/extract_dvcs_cff/evaluation/: __init__.py  diagnostics.py  metrics.py
src/extract_dvcs_cff/inference/: __init__.py  predict.py
src/extract_dvcs_cff/lhapdf/: adapter.py
src/extract_dvcs_cff/losses/: __init__.py  composite.py  physics_terms.py
src/extract_dvcs_cff/models/: __init__.py  baseline_adapters.py  gpd_backbone.py  gpd_heads.py  kinematics_encoder.py
src/extract_dvcs_cff/partons/: adapter.py
src/extract_dvcs_cff/physics/: __init__.py  cff_convolution.py  constraints.py  evolution.py  kinematics.py  likelihood.py  observables.py
src/extract_dvcs_cff/plotting/: __init__.py  base.py  gpd_plots.py
tests/unit/: test_cff_convolution.py  test_form_factor_provider.py  test_kinematics_encoder.py  test_lhapdf_forward_limit.py  test_likelihood.py  test_mellin_polynomiality.py  test_observables_toy.py  test_positivity_penalty.py  test_replicas_and_composite_loss.py  test_schemas.py  test_seed_determinism.py  test_torch_observables_layer.py  test_validation.py
(+15 files in other folders)
