[tool.poetry]
name = "extract-dvcs-cff"
version = "0.1.0"
description = "Production-grade framework for extracting CFFs and GPDs from DVCS data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "extract_dvcs_cff", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.0.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pydantic = "^2.0.0"
numpy = "^1.25.0"
scipy = "^1.11.0"
pandas = "^2.0.0"
xarray = "^2023.0.0"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.extras]
mlflow = ["mlflow"]
wandb = ["wandb"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.poetry.scripts]
extract-dvcs-cff = "extract_dvcs_cff.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
